# subtitler

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  main.py  pyproject.toml  test.py
general_utils/: loggers.py  utils.py
google/api/: annotations_pb2.py  http_pb2.py
google/rpc/: status_pb2.py
src/: main.rs
yandex/cloud/: validation_pb2.py
yandex/cloud/ai/stt/v3/: stt_pb2.py  stt_service_pb2.py  stt_service_pb2_grpc.py
yandex/cloud/api/: operation_pb2.py
yandex/cloud/operation/: operation_pb2.py
