[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "pre-commit>=3.4.0",
]

[project]
name = "subtitler"
version = "0.1.0"
description = ""
authors = [
    { name = "SEBROVATER", email = "sebrovskiy.k@gmail.com" },
]
dependencies = [
    "pyaudio>=0.2.13",
    "python-dotenv>=1.0.0",
    "ruff>=0.0.292",
    "grpcio-tools>=1.59.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
select = ["E", "F", "UP", "I", "C90", "PL", "NPY", "RUF"]
ignore = ["PLR2004", "PLR0913", "PLR", "C901", "PLW2901", "PLW0120", "RUF012", "F405", "F403", ]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "google",
    "yandex",
]
per-file-ignores = { }
ignore-init-module-imports = true
line-length = 100
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
show-fixes = true
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']
extend-exclude = ""